--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="brazaela face.png" alt="Final Fantasy XIV Viera"></td>
+      <td><img src="wayne.jpg" alt="Final Fantasy XIV Viera"></td>
       <td><h1>Wayne Maung</h1>
       <p><em>Code Monkey <strong><a href="https://software.af.mil/software-factories/">HERE</a></strong></em></p>
       <p>I am a software developer for the Air Force. I love video games.</p></td>
